# iron-doom

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  response_file.rs
crates/common/: Cargo.toml
crates/common/src/: array2d.rs  buffer.rs  lib.rs
crates/exit/: Cargo.toml
crates/exit/src/: commands.rs  lib.rs
crates/game-state/: Cargo.toml
crates/game-state/src/: conditions.rs  lib.rs
crates/level/: Cargo.toml
crates/level/src/: commands.rs  components.rs  lib.rs  map_object.rs  resources.rs
crates/level/src/commands/: lines.rs  lines_sides.rs  map_objects.rs  sectors.rs  segments.rs  sub_sectors.rs  utils.rs
crates/level/src/map_object/: camera.rs  player.rs
crates/level/src/map_object/player/: controls.rs  movement.rs
crates/level/src/map_object/player/movement/: constants.rs
crates/rand/: Cargo.toml
crates/rand/src/: lib.rs  table.rs
crates/screen-melt/: Cargo.toml
crates/screen-melt/src/: components.rs  events.rs  lib.rs  resources.rs  schedules.rs  systems.rs
crates/title-screen/: Cargo.toml
crates/title-screen/src/: lib.rs
crates/wad/: Cargo.toml
crates/wad/src/: directory.rs  flat.rs  header.rs  index_map.rs  lib.rs  lump.rs  map.rs  palette.rs  patch.rs  sys.rs  util.rs  wall_texture.rs
crates/wad/src/map/: block_map.rs  line.rs  node.rs  reject.rs  sector.rs  segment.rs  side.rs  sub_sector.rs  thing.rs  vertex.rs
crates/wad/src/patch/: column.rs  header.rs
crates/wad/src/sys/: null.rs  unix.rs  windows.rs
crates/wad/src/sys/windows/: software_registry.rs
crates/wad/src/wall_texture/: column.rs  definition.rs  patch_names.rs
crates/window/: Cargo.toml
crates/window/src/: exit.rs  input.rs  lib.rs  palette.rs  sdl_window.rs
crates/window/src/input/: keyboard.rs
crates/window/src/palette/: gamma_table.rs
crates/world-view/: Cargo.toml
crates/world-view/src/: depth_clipping.rs  lib.rs
crates/world-view/src/depth_clipping/: portal.rs  wall.rs
doom/: Cargo.toml
doom/src/: defs.rs  level.rs  main.rs  render.rs  setup.rs  string_consts.rs  utils.rs
doom/src/level/: level_render.rs  load_level.rs  map_object.rs
doom/src/level/level_render/: player.rs  status_bar.rs
doom/src/level/level_render/player/: auto_map.rs  three_d.rs
doom/src/level/level_render/player/auto_map/: background_drawer.rs  colors.rs  cross_hair_drawer.rs  line_drawer.rs  map_geometry.rs  player_drawer.rs  walls_drawer.rs
doom/src/level/level_render/player/three_d/: graphics_assets.rs  horizontal_screen.rs  render_flats.rs  render_walls.rs
doom/src/level/level_render/player/three_d/graphics_assets/: flats.rs  wall_textures.rs
doom/src/level/level_render/player/three_d/render_walls/: cull.rs  draw_columns.rs  extract.rs  horizontal_clip.rs
doom/src/level/level_render/player/three_d/render_walls/draw_columns/: portal.rs  solid_wall.rs
doom/src/level/level_render/player/three_d/render_walls/horizontal_clip/: solid_wall_clipping.rs
doom/src/level/level_render/status_bar/: draw_consts.rs  widgets.rs
doom/src/level/load_level/: block_map.rs  line_defs.rs  nodes.rs  reject_table.rs  sectors.rs  segments.rs  side_defs.rs  sub_sectors.rs  things.rs  vertexes.rs
doom/src/level/map_object/: controls.rs  movement.rs
doom/src/level/map_object/movement/: constants.rs
doom/src/render/: wipe.rs
doom/src/setup/: file_system.rs  game_mechanics.rs  game_params.rs  game_version.rs
engine_core/: Cargo.toml
engine_core/src/: app.rs  command_line.rs  file_system.rs  fixed_point.rs  geometry.rs  input.rs  lib.rs  random.rs  sys.rs  video_system.rs  wad_system.rs
engine_core/src/file_system/: directory.rs  file_format.rs
engine_core/src/geometry/: angle.rs
engine_core/src/geometry/angle/: tables.rs
engine_core/src/input/: input_impl.rs
engine_core/src/input/input_impl/: converters.rs
engine_core/src/sys/unix/file_system/: iwad.rs
engine_core/src/sys/windows/file_system/: iwad.rs
engine_core/src/sys/windows/file_system/iwad/: software_registry.rs
engine_core/src/video_system/: video_imp.rs
engine_core/src/wad_system/: defs.rs
engine_core/src/wad_system/defs/: block_map.rs  line_defs.rs  node.rs  patch.rs  patches_names.rs  reject_table.rs  sectors.rs  segments.rs  side_defs.rs  sub_sectors.rs  texture.rs  texture_patch.rs  things.rs  vertexes.rs
macros/sys-fail/: Cargo.toml
macros/sys-fail/src/: lib.rs
src/: crates_plugins.rs  main.rs
