[package]
name = "doom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
const_format = "0.2.32"
derive_more = { workspace = true }
engine_core = { path = "../engine_core" }
leafwing-input-manager = "0.15.0"
rustc-hash = { workspace = true }
sdl2 = { workspace = true, features = ["image"] }
rand = "0.8.5"
