[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
clap = { version = "4.5.1", features = ["derive"] }
derive_more = { workspace = true }
fixed = "1.27.0"
libc = "0.2.153"
paste = "1.0.15"
quick_cache = "0.6.0"
sdl2 = { workspace = true, features = ["unsafe_textures"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Registry"] }
