[package]
name = "wad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
cfg-if = "1.0.0"
cli = { path = "../cli" }
common = { path = "../common" }
derive_more = { workspace = true, features = ["into_iterator", "index"] }
exit = { path = "../exit" }
game-state = { path = "../game-state" }
indexmap = "2.7.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32_System_Registry"] }
