[package]
name = "world-view"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
derive_more = { workspace = true, features = ["as_ref", "index_mut"] }
game-state = { path = "../game-state" }
level = { path = "../level" }
moonshine-kind = { workspace = true }
wad = { path = "../wad" }
window = { path = "../window" }
